--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
-    "mongodb": "^4.2.1",
+    "mongodb": "^4.2.2",
     "nodemon": "^2.0.15",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "shortid": "^2.2.16"
   }
 }
