--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "chetan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.2",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "shortid": "^2.2.16"
